# local-voice-ai

./: .gitignore  .vscodeignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  native-windows.yml  release.yml
docs/: TESTING.md
docs/superpowers/specs/: 2026-04-20-phase-2-design.md
media/: webview.html
native/: Cargo.toml
native/hold-to-talk/: Cargo.toml
native/hold-to-talk/src/: main.rs
native/whisper-napi/: Cargo.toml
native/whisper-napi/src/: lib.rs
src/: commands.ts  extension.ts  history.ts  models.ts  nativeKeyboard.ts  nativeStreaming.ts  platform.ts  setup.ts  transcribe.ts
